--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ WALLET_FILE=wallet.json
 # testnet or livenet or regtest
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
+GOWORKER_BIN=./atomicals-go/atomicals-go-darwin-arm64
