--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ WALLET_FILE=wallet.json
 # testnet or livenet or regtest
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
-CONCURRENCY=4
+GOWORKER_BIN=./atomicals-go/atomicals-go-darwin-arm64
