可以手动调整抽成

--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ WALLET_FILE=wallet.json
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
 GOWORKER_BIN=./atomicals-go/atomicals-go-darwin-arm64
+COMMISSION=3000
