--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ WALLET_FILE=wallet.json
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
 GOWORKER_BIN=./atomicals-go/atomicals-go-darwin-arm64
+COMMISSION=3000
