同步官方改动

--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,14 @@
 # Bitcoin (Testnet):
 # ELECTRUMX_PROXY_BASE_URL=https://eptestnet.atomicals.xyz/proxy
 
-ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
-ATOMICALS_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
+ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy,https://ep.atomicalmarket.com/proxy,https://ep.nextdao.xyz/proxy,https://ep.consync.xyz/proxy
 WALLET_PATH=./wallets
 WALLET_FILE=wallet.json
 # testnet or livenet or regtest
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
+
+ATOMICALS_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy,https://ep.atomicalmarket.com/proxy,https://ep.nextdao.xyz/proxy,https://ep.consync.xyz/proxy
 GOWORKER_BIN=./atomicals-go/atomicals-go-linux-amd64
 COMMISSION=3000
+PRIMARY_ADDRESS=bc1p...
