--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ name: "atomicals-go"
 
 services:
   app:
-    image: goudanwoo/atomicals-go:1.0.0
+    image: ghcr.io/goudanwoo/atomicals-go:1.0.0
     build:
       context: .
       dockerfile: Dockerfile
